tests/it/wire/snapshots/it__wire__openai_chat__replays_provider_native_content_losslessly.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "What is the weather in Paris?",
            "type": "text"
          }
        ],
        "role": "user"
      },
      {
        "reasoning": {
          "encrypted_content": "opaque-payload",
          "id": "rs_replay"
        },
        "role": "assistant",
        "tool_calls": [
          {
            "function": {
              "arguments": "{\"city\": \"Paris\"}",
              "name": "get_weather"
            },
            "id": "call_replay",
            "type": "function"
          }
        ]
      },
      {
        "content": "18C and clear",
        "role": "tool",
        "tool_call_id": "call_replay"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": false,
    "tools": [
      {
        "function": {
          "description": "Reads the current weather for a city",
          "name": "get_weather",
          "parameters": {
            "properties": {
              "city": {
                "type": "string"
              }
            },
            "required": [
              "city"
            ],
            "type": "object"
          }
        },
        "type": "function"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "690"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
