tests/it/wire/snapshots/it__wire__openai_chat__sends_a_developer_message_as_a_system_message.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "cache_control": {
              "type": "ephemeral"
            },
            "text": "Keep it short.",
            "type": "text"
          }
        ],
        "role": "system"
      },
      {
        "content": "Hello",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "219"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
