tests/it/wire/snapshots/it__wire__openai_chat__sends_only_the_selected_provider_option_namespace.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_output_tokens": 256,
    "max_tokens": 128,
    "messages": [
      {
        "content": "Hello",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "service_tier": "flex"
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "143"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
