tests/it/wire/snapshots/it__wire__openai_chat__streamed_reasoning_details_coalesce_before_the_part_is_built.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
[
  {
    "id": "chatcmpl-stream",
    "type": "started"
  },
  {
    "id": "reasoning-details-0",
    "kind": {
      "kind": "openai_compatible.reasoning_details",
      "type": "opaque"
    },
    "type": "content_block_start"
  },
  {
    "id": "block-0",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "block-0",
    "text": "Hello.",
    "type": "text_delta"
  },
  {
    "id": "reasoning-details-0",
    "part": {
      "data": [
        {
          "index": 0,
          "text": "Two cities to look up.",
          "type": "reasoning.text"
        },
        {
          "index": 1,
          "signature": "sig-1",
          "text": "and one time zone.",
          "type": "reasoning.text"
        }
      ],
      "kind": "openai_compatible.reasoning_details",
      "type": "opaque"
    },
    "type": "content_block_end"
  },
  {
    "id": "block-0",
    "part": {
      "text": "Hello.",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "response": {
      "content": [
        {
          "data": [
            {
              "index": 0,
              "text": "Two cities to look up.",
              "type": "reasoning.text"
            },
            {
              "index": 1,
              "signature": "sig-1",
              "text": "and one time zone.",
              "type": "reasoning.text"
            }
          ],
          "kind": "openai_compatible.reasoning_details",
          "type": "opaque"
        },
        {
          "text": "Hello.",
          "type": "text"
        }
      ],
      "finish_reason": "stop",
      "id": "chatcmpl-stream",
      "model": {
        "model": "compat-chat",
        "provider": "compat"
      },
      "usage": {
        "cache_read": 0,
        "cache_write": 0,
        "input": 0,
        "output": 0,
        "reasoning": 0
      }
    },
    "type": "ended"
  }
]
