tests/it/wire/snapshots/it__wire__openai_chat__streaming_always_asks_for_usage-2.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
[
  {
    "id": "chatcmpl-stream",
    "type": "started"
  },
  {
    "id": "block-0",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "block-0",
    "text": "Hello.",
    "type": "text_delta"
  },
  {
    "id": "block-0",
    "part": {
      "text": "Hello.",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "response": {
      "content": [
        {
          "text": "Hello.",
          "type": "text"
        }
      ],
      "finish_reason": "stop",
      "id": "chatcmpl-stream",
      "model": {
        "model": "compat-chat",
        "provider": "compat"
      },
      "usage": {
        "cache_read": 0,
        "cache_write": 0,
        "input": 0,
        "output": 0,
        "reasoning": 0
      }
    },
    "type": "ended"
  }
]
