tests/it/wire/snapshots/it__wire__openai_chat__streaming_always_asks_for_usage.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": "Hello",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": true,
    "stream_options": {
      "include_usage": true
    }
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "151"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
