tests/it/wire/snapshots/it__wire__openai_chat__unmodeled_provider_fields_survive_only_in_raw.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "content": [
    {
      "text": "ok",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "chatcmpl-raw",
  "model": {
    "model": "compat-chat",
    "provider": "compat"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        },
        "native_finish_reason": "eos"
      }
    ],
    "id": "chatcmpl-raw",
    "provider": "Fireworks",
    "usage": {
      "completion_tokens": 2,
      "cost_details": {
        "upstream_inference_cost": 0.5
      },
      "prompt_tokens": 4,
      "prompt_tokens_details": {
        "audio_tokens": 3
      }
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 4,
    "output": 2,
    "reasoning": 0
  }
}
