tests/it/wire/snapshots/it__wire__openai_chat__usage_cost_wins_over_a_top_level_cost.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "id": "chatcmpl-cost",
  "model": {
    "provider": "compat",
    "model": "compat-chat"
  },
  "content": [
    {
      "type": "text",
      "text": "ok"
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 4,
    "output": 2,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "cost": {
    "usd_micros": 1000,
    "source": "provider"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "ok",
          "role": "assistant"
        }
      }
    ],
    "cost": {
      "usd": 0.25
    },
    "id": "chatcmpl-cost",
    "usage": {
      "completion_tokens": 2,
      "cost": 0.001,
      "prompt_tokens": 4
    }
  }
}
